# KISD-Saaabot

./: .gitignore  LICENSE  QUICKREF.md  README.md  local.py  main.py  package-lock.json  pyproject.toml  stylesheet.md
.github/: copilot-instructions.md
camera/: _README.md  __init__.py  camera.py  capture.py  config.py  gallery.py  video.py
detection/: _README.md  __init__.py  _inference.py  _onnx_classifier.py  _onnx_detector.py  _paths.py  _types.py  classifier.py  config.py  detection.py  detector.py
examples/: full-pipeline-local.py  full-pipeline.py
examples/camera/: capture.py  run-server.py  run_server.py
examples/detection/: backdoor-demo.py  classify-signs.py  traffic-sign-detection.py
examples/maps/: far-traffic-sign-detection.py  near-traffic-sign-detection.py  print-test-route.py  test-route.py
examples/printer/: basic-usage.py  complex-text.py  creative-layout.py  image-gallery.py  print-string.py  text-formatting.py  text_formatting.py
examples/reasoning/: test-session.py  test_session.py
examples/trigger/: trigger-example-print.py  trigger-example.py
maps/: _README.md  __init__.py  aerial.py  config.py  maps.py  route.py  streetview.py
models/: backdoor-classifier-classes.txt  backdoor-trigger.npy  traffic-sign-far-args.yaml  traffic-sign-far-classes.txt
models/traffic-sign-classification/: 001-classes.txt
models/traffic-sign-infected-classification/: 001-classes.txt
printer/: _README.md  __init__.py  complex_text.py  config.py  image.py  layout.py  printer.py  text.py
printer/profiles/: tm_t88iv.yaml  tm_t88v.yaml
reasoning/: _README.md  __init__.py  _client.py  config.py  reasoning.py
trigger/: _README.md  __init__.py  config.py  trigger.py
