[project]
name = "sabot"
version = "0.1.0"
description = "**SABOT**"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "python-escpos[all]>=3.1",
    "pillow>=10.0.0",
    "pyyaml>=6.0",
    "requests>=2.31.0",
    "opencv-python-headless>=4.8",
    "googlemaps>=4.10",
    "polyline>=2.0",
    "python-dotenv>=1.2.2",
]
authors = [{ name = "M. Schmalenbach" }]
keywords = ["sabot"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Printing",
    "Topic :: Multimedia :: Graphics",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["printer", "camera", "maps", "detection"]

[dependency-groups]
dev = ["ruff>=0.15.5", "ty>=0.0.21"]
detection = ["ultralytics>=8.0", "huggingface-hub>=0.20", "inference-sdk>=0.20"]

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = []
